--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         versionCode 23
         versionName "5.9"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86' ,'x86_64'
+        ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
 
     }
 
@@ -56,15 +56,13 @@ dependencies {
     implementation 'com.opencsv:opencsv:4.1'
     implementation files('libs/jxl.jar')
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.github.pengrad:mapscaleview:1.4.2'
     implementation "android.arch.work:work-runtime:1.0.0-alpha05"
-    implementation 'org.osmdroid:osmdroid-android:6.1.0'
-    implementation 'org.slf4j:slf4j-android:1.7.12'
-    implementation 'org.osmdroid:osmdroid-wms:6.1.0'
+    implementation 'net.lingala.zip4j:zip4j:2.2.7'
 
 }
