--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".DGPSSyncMenuActivity"></activity>
+        <activity android:name=".DGPSDataTaggMenuActivity"></activity>
+        <activity android:name=".DFPSRTXDataExportActivity" />
+        <activity android:name=".DGPSSyncMenuActivity" />
         <activity android:name=".DGPSViewPillarDetailActivity" />
         <activity android:name=".DGPSMapViewActivity" />
         <activity android:name=".DGPSDataExportActivity" />
@@ -63,17 +65,16 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
     </application>
-
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
+
     <uses-feature
         android:name="android.hardware.camera.flash"
         android:required="false" />
-
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
