--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,15 @@
     package="com.sparc.frjvcapp">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/black_tree"
         android:label="@string/app_name"
         android:roundIcon="@drawable/black_tree"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".DGPSDataTaggMenuActivity"></activity>
+        <activity android:name=".DGPSJXLDataExportActivity"></activity>
+        <activity android:name=".DGPSDataTaggMenuActivity" />
         <activity android:name=".DFPSRTXDataExportActivity" />
         <activity android:name=".DGPSSyncMenuActivity" />
         <activity android:name=".DGPSViewPillarDetailActivity" />
@@ -40,9 +41,9 @@
         <activity android:name=".UserProfileActivity" />
         <activity android:name=".SearchMapFile" />
 
-        <meta-data
+   <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyB-VJ5Dc0Wf-AzmvNlwd48GuzwBN25s8JQ" />
+            android:value="@string/ApiKey"/>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -87,6 +88,7 @@
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.Manifest.permission.READ_PRIVILEGED_PHONE_STATE" />
+
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 </manifest>
