--- a/gradle.properties
+++ b/gradle.properties
@@ -11,19 +11,19 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-LOG_IN="http://14.98.253.212/sltp/api/values/auth/"
-BASE="http://14.98.253.212/"
-OTP_IN="http://14.98.253.212/sltp/api/values/sendotptouser/"
-F_D_RANGE_DATA="http://14.98.253.212/sltp/api/values/range/"
-F_D_FB_DATA="http://14.98.253.212/sltp/api/values/fb/"
-F_D_FB_PILL_DATA="http://14.98.253.212/sltp/api/values/getPillarPointDetails/"
-DGPS_D_FB_PILL_DATA="http://14.98.253.212/sltp/api/values/adddgpspillar"
-F_PILL_PIC_NODE="http://14.98.253.212:5067/"
-DGPS_PILL_PIC_NODE="http://14.98.253.212:5067/"
-F_PILL_PIC_SYNC_DATA="http://14.98.253.212/sltp/api/values/getpillardetails/"
-F_DOWND_FRJVC_SRV_POINT="http://14.98.253.212/sltp/api/values/getPillarPointDetails/"
+LOG_IN="http://203.193.146.205:5060/api/values/auth/"
+BASE="http://203.193.146.205/"
+OTP_IN="http://203.193.146.205:5060/api/values/sendotptouser/"
+F_D_RANGE_DATA="http://203.193.146.205:5060/api/values/range/"
+F_D_FB_DATA="http://203.193.146.205:5060/api/values/fb/"
+F_D_FB_PILL_DATA="http://203.193.146.205:5060/api/values/getPillarPointDetails/"
+DGPS_D_FB_PILL_DATA="http://203.193.146.205:5060/api/values/adddgpspillar"
+F_PILL_PIC_NODE="http://203.193.146.205:5067/"
+DGPS_PILL_PIC_NODE="http://203.193.146.205:5067/"
+F_PILL_PIC_SYNC_DATA="http://203.193.146.205:5060/api/values/getpillardetails/"
+F_DOWND_FRJVC_SRV_POINT="http://203.193.146.205:5060/api/values/getPillarPointDetails/"
 F_KML = "http://odishaforestlandsurvey.in/kml/"
-F_UDT_PILL = "http://14.98.253.212/sltp/api/values/addpillar"
-F_CFM_UDT_PILL = "http://14.98.253.212/sltp/api/values/confirmpillar" 
-F_SFT_FRJVC_PILL = "http://14.98.253.212/sltp/api/values/addshiftpillar"
-R_DGPS_PILL_DWNLD = "http://14.98.253.212/sltp/api/values/getdgpspillartorevisit/"
+F_UDT_PILL = "http://203.193.146.205:5060/api/values/addpillar"
+F_CFM_UDT_PILL = "http://203.193.146.205:5060/api/values/confirmpillar" 
+F_SFT_FRJVC_PILL = "http://203.193.146.205:5060/api/values/addshiftpillar"
+R_DGPS_PILL_DWNLD = "http://203.193.146.205:5060/api/values/getdgpspillartorevisit/"
